<resources>
    <string name="group_name">EasyBooking</string>
    <string name="app_name">Mitra EasyBooking</string>
    <string name="retry">Retry</string>
    <string name="no_internet">No internet connection</string>
    <string name="fetch_failed">Failed Fetching API</string>
    <string name="some_error">Some Error</string>
    <string name="remote_data">Remote Data</string>
    <string name="shared_preference_data">SharedPreference Data</string>
    <string name="local_data">Locale Data</string>
    <string name="empty_data">No data available!</string>
    <string name="show_data">Success show result data -> %1$s</string>
    <string name="movie_desc">%1$d - %2$s\n</string>
    <string name="todo">TODO</string>
    <string name="no_data_showing">No data showing…</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_home">Menu Utama</string>
    <string name="username">Username</string>
    <string name="login">Log in</string>
    <string name="pihak_ketiga">Pihak Ketiga</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="daftar">Daftar</string>
    <string name="forget_pass">Lupa Password ?</string>
    <string name="loading">Loading…</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="riwayat_kunjungan">Riwayat Kunjungan</string>
    <string name="riwayat_verifikasi_check_out">Riwayat Verifikasi Check Out</string>
    <string name="akun_pihak_ketiga">Akun Pihak Ketiga</string>
    <string name="tanggal_awal">Tanggal Awal</string>
    <string name="cari_kamar">Cari Kamar</string>
    <string name="status_kamar">Status Kamar</string>
    <string name="booking">Booking</string>
    <string name="example_room">Kamar No. 301</string>
    <string name="example_room_type">Business Class Room Type</string>
    <string name="tanggal_akhir">Tanggal Akhir</string>
    <string name="maaf_data_tidak_ditemukan">Maaf data tidak ditemukan</string>
    <string name="mitra_millenial_property">Mitra ResOn</string>
    <string name="arahkan_camera_anda_ke_qr_code_atau_barcode">Arahkan kamera anda ke QR atau barcode</string>
    <string name="scanning">Scanning…</string>
    <string name="atau_input_manual_kode_booking">Atau, Input manual Kode Booking!</string>
    <string name="gagal_mendapatkan_data">Gagal Mendapatkan Data!</string>
    <string name="mohon_maaf_anda_belum_terdaftar_untuk_menggunakan_lokasi_ini_silahkan_melakukan_booking_room">Mohon Maaf, Anda Belum Terdaftar untuk menggunakan lokasi ini. Silahkan melakukan booking room!</string>
    <string name="kembali">Kembali</string>
    <string name="nomor_hp">Nomor Hp</string>
    <string name="e_mail">E-Mail</string>
    <string name="alamat">Alamat</string>
    <string name="name">Nama</string>
    <string name="semicolon">:</string>
    <string name="paket">Paket</string>
    <string name="jenis_user">Jenis User</string>
    <string name="confirmation">Konfirmasi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_out_terbaru">Check Out Terbaru</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="verifikasi_check_out">Verifikasi Check Out</string>
    <string name="check_barang">Check Barang</string>
    <string name="nominal_kerusakan">Nominal Kerusakan</string>
    <string name="status">Status</string>
    <string name="apakah_dalam_kondisi_baik">Apakah %s dalam kondisi baik?</string>
    <string name="ya_baik">Ya, Baik</string>
    <string name="tidak_baik">Tidak Baik</string>
    <string name="masukkan_keterangan_barang_disini">Masukkan Keterangan Barang Disini…</string>
    <string name="submit">Submit</string>
    <string name="service">Service</string>
    <string name="powered_by">By Booble Mitra Kreatif</string>
    <string name="room_status">Status Lokasi</string>
    <string name="forgot_password">Lupa Password</string>
    <string name="hint_forgot_pass">Masukkan alamat email yang anda gunakan pada proses registrasi. Kami akan mengirimkan email petunjuk untuk mengganti password anda!</string>
    <string name="email_address">Alamat Email</string>
    <string name="send_email">Kirim Email</string>
    <string name="dummy_name">Rivaldy</string>
    <string name="dummy_name_apartment">Booble Workingspace</string>
    <string name="dummy_facility_name">Deluxe Private Room</string>
    <string name="dummy_check_in">Transaction 14/08/2021</string>
    <string name="no_data">Belum ada data</string>
    <string name="detail_check_in">Detail Check In</string>
    <string name="dummy_room">VIP Room Type</string>
    <string name="form_required">Form ini perlu diisi</string>
    <string name="dummy_email" />
    <string name="dummy_password" />
    <string name="dash">-</string>
    <string name="check_out_success">Check Out Berhasil</string>
    <string name="check_in_success">Check Out Berhasil</string>
    <string name="desc_check_out_succes">Nominal kerusakan telah kami kirimkan ke user (Pemesan). Terima kasih telah melakukan transaksi</string>
    <string name="ok">OK</string>
    <string name="try_again">Coba lagi</string>
    <string name="process_check_in">Proses Check In</string>
    <string name="sure_check_in">Yakin ingin melakukan Check In?</string>
    <string name="process_check_out">Proses Check Out</string>
    <string name="sure_check_out">Yakin ingin melakukan Check Out?</string>
    <string name="on_booked">Dibooking</string>
    <string name="user_type">Jenis User</string>
    <string name="transaction_type">Jenis Transaksi</string>
    <string name="check_item">Check Barang</string>
    <string name="edit">Edit</string>
    <string name="damage_amount">Nominal Kerusakan</string>
    <string name="dummy_rp">Rp. 1000.000</string>
    <string name="verification">Verifikasi</string>
    <string name="dummy_invoice">#INV080820212021</string>
    <string name="user_data_order">Data User Pemesan</string>
    <string name="good">Baik</string>
    <string name="damaged">Rusak</string>
    <string name="missed">Hilang</string>
    <string name="input_item_desc">Masukkan keterangan barang…</string>
    <string name="open_photo">Buka Foto</string>
    <string name="no_image">*Belum ada gambar</string>
    <string name="how_item_desc_">Bagaimana kondisi barang %s ?</string>
    <string name="upload_image_before">Upload gambar terlebih dahulu!</string>
    <string name="user_info">Informasi User</string>
    <string name="address">Alamat</string>
    <string name="order_for">Dipesankan Untuk :</string>
    <string name="image_id_card">Foto KTP</string>
    <string name="see_detail">Lihat Detail Booking</string>
    <string name="required_scan_qr">Scan Kode Booking/Isi Form terlebih dahulu!</string>
    <string name="input_booking_code">Masukkan Kode Booking</string>
    <string name="item_empty_reload">Data barang kosong, mohon load ulang!</string>
    <string name="detail_check_out">Detail Check Out</string>
    <string name="check_out_history">Riwayat Check Out</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="full_bio">Lengkapi Biodata Diri</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="gender_type">Jenis Kelamin</string>
    <string name="birth_date">Tanggal Lahir</string>
    <string name="phone">Nomor Telpon</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="phone_number">Nomor Handphone</string>
    <string name="empty_no_pass">Kosongkan jika tidak ingin mengganti password.</string>
    <string name="update_change">Simpan Perubahan</string>
    <string name="logout">Logout</string>
    <string name="exit_app">Keluar Aplikasi</string>
    <string name="sure_exit_app">Apakah anda yakin ingin keluar dari aplikasi ?</string>
    <string name="write_message">Tulis Pesan…</string>
    <string name="dilihat">dilihat</string>
    <string name="terkirim">terkirim</string>
    <string name="pesan_tidak_boleh_kosong">Pesan tidak boleh kosong</string>
    <string name="type_something">Tulis sesuatu untuk memulai percakapan…</string>
    <string name="booking_date">Tanggal Booking</string>
    <string name="select_booking_date">Pilih tanggal booking</string>
    <string name="phone_empty">Nomor telpon tidak tersedia</string>
    <string name="ordered">Ordered</string>
    <string name="no_found">Data tidak ditemukan!</string>
    <string name="mitra">Mitra</string>
    <string name="add_service">Tambah Lokasi</string>
    <string name="your_service">Lokasi Kamu</string>
    <string name="wall">Beranda</string>
    <string name="booking_history">Riwayat Booking</string>
    <string name="register_service">Daftarkan Service</string>
    <string name="withdraw_balance">Tarik Saldo</string>
    <string name="profile_setting">Pengaturan Profil</string>
    <string name="service_name">Nama Lokasi</string>
    <string name="service_address">Kategori Lokasi</string>
    <string name="city">Kota</string>
    <string name="choose_city">Pilih Kota</string>
    <string name="specify_location">Tentukan Lokasi</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="full_address">Alamat Lengkap</string>
    <string name="save">Simpan</string>
    <string name="browse_image">Pilih Gambar</string>
    <string name="dummy_price_no_rp">87.000</string>
    <string name="invoice_code">Kode Invoice</string>
    <string name="info_booking">Info Booking</string>
    <string name="guest_info">Info Tamu</string>
    <string name="member_code">Kode Member</string>
    <string name="pay_to_millennial">Dibayarkan Ke Pihak ResOn</string>
    <string name="pay_to_mitra">Dibayarkan Ke Mitra</string>
    <string name="detail_booking_history">Detail Riwayat Booking</string>
    <string name="your_balance">Saldo Anda</string>
    <string name="nominal_wd">Nominal Penarikan</string>
    <string name="select_bank">Pilih Bank</string>
    <string name="bank_number">Nomor Rekening</string>
    <string name="owner_name">Nama Pemilik</string>
    <string name="do_pay">Lakukan Pembayaran</string>
    <string name="do_withdraw">Lakukan Penarikan</string>
    <string name="detail">Detail</string>
    <string name="change">Ubah</string>
    <string name="service_detail">Detail Lokasi</string>
    <string name="room_facility">Fasilitas</string>
    <string name="add_room">Tambah Unit</string>
    <string name="add_facility">Tambah Fasilitas</string>
    <string name="room_name">Nama Unit</string>
    <string name="max_booking_day">Jumlah Kamar</string>
    <string name="bedroom_count">Jml. Tempat Tidur</string>
    <string name="bathroom_count">Jml. Kamar Mandi</string>
    <string name="guest_count">Jumlah Tamu</string>
    <string name="room_area">Luas Unit (m²)</string>
    <string name="purchase_price">Harga Beli</string>
    <string name="rental_price">Harga Sewa</string>
    <string name="night_">/ malam</string>
    <string name="month_">/ bulan</string>
    <string name="year_">/ tahun</string>
    <string name="room_description">Deskripsi Unit</string>
    <string name="input_product_description">Masukkan deskripsi produk</string>
    <string name="add_room_image">Tambah Gambar</string>
    <string name="balance_history">Riwayat Saldo Mitra</string>
    <string name="call_center">Pusat Bantuan</string>
</resources>