<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/menuHomeRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_ripple_square_navy_orange"
        android:padding="@dimen/dimen_12">

        <ImageView
            android:id="@+id/homeIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_nav_home"
            app:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/homeTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/homeIV"
            android:fontFamily="@font/montserrat_regular"
            android:includeFontPadding="false"
            android:text="@string/wall"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/menuBookingHistoryRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_ripple_square_navy_orange"
        android:padding="@dimen/dimen_12">

        <ImageView
            android:id="@+id/ivHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_booking_history"
            app:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/historyTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/ivHistory"
            android:fontFamily="@font/montserrat_regular"
            android:includeFontPadding="false"
            android:text="@string/booking_history"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/menuBookingHistoryBalanceRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_ripple_square_navy_orange"
        android:padding="@dimen/dimen_12">

        <ImageView
            android:id="@+id/ivHistoryBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_booking_history"
            app:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/historyBalanceTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/ivHistoryBalance"
            android:fontFamily="@font/montserrat_regular"
            android:includeFontPadding="false"
            android:text="@string/balance_history"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/menuRegisterServiceRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_ripple_square_navy_orange"
        android:padding="@dimen/dimen_12">

        <ImageView
            android:id="@+id/registerServiceIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_register_service"
            app:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/registerServiceTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/registerServiceIV"
            android:fontFamily="@font/montserrat_regular"
            android:includeFontPadding="false"
            android:text="@string/register_service"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/menuWithdrawBalanceRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_12">

        <ImageView
            android:id="@+id/ivHistoryCheckout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_withdraw_balance"
            app:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/withdrawTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/ivHistoryCheckout"
            android:fontFamily="@font/montserrat_regular"
            android:includeFontPadding="false"
            android:text="@string/withdraw_balance"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/menuSettingRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_12">

        <ImageView
            android:id="@+id/menuHistoryCheckoutIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_setting"
            app:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/menuHistoryCheckoutTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/menuHistoryCheckoutIV"
            android:fontFamily="@font/montserrat_regular"
            android:includeFontPadding="false"
            android:text="@string/profile_setting"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/menuCallCenterRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_12">

        <ImageView
            android:id="@+id/ivCallCenter"
            android:layout_width="@dimen/space_18"
            android:layout_height="@dimen/space_18"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_info"
            app:tint="@color/colorAccent" />

        <TextView
            android:id="@+id/tvCallCenter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/ivCallCenter"
            android:fontFamily="@font/montserrat_regular"
            android:includeFontPadding="false"
            android:text="@string/call_center"
            android:textSize="14sp" />
    </RelativeLayout>
</LinearLayout>